fix: fix chat message no wrap

--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -27,22 +27,6 @@
 	margin-bottom: -32px;
 }
 
-/* .dashboard-speech-bubble:after {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	width: 0;
-	height: 0;
-	border: 50px solid transparent;
-	border-top-color: #00aabb;
-	border-bottom: 0;
-	border-left: 0;
-	margin-left: -25px;
-	margin-bottom: -50px;
-
-} */
-
 .pac-container {
 	z-index: 10000 !important;
 }
